[tool.poetry]
name = "basic-models"
version = "0.1.0"
description = ""
authors = ["Yash Kumar <github@yashkc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
